--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -89,8 +89,8 @@
   .close-menu{
     font-size: 40px;
     position: absolute;
-    top: 0;
-    right: 20px;
+    top: 16px;
+    left: 20px;
     cursor: pointer;
     /* padding: 20px; */
     /* margin: 20px 0; */
@@ -105,7 +105,7 @@
   .menu-container {
     display: none;
     background:  #f5cff8;
-    height: 100vh;
+    height: 50vh;
     width: 0;
     position: fixed;
     right: 0;
@@ -122,7 +122,7 @@
     display: block;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     padding: 20px 40px;
     position: relative;
@@ -154,5 +154,8 @@
     height: 16px;
     margin-left: -45px;
     margin-top: -30px;
+  }
+  .menu-container.active{
+    width: 70vw;
   }
 }
