--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -5,7 +5,7 @@
     gap: 10px;
     margin-bottom: 100px;
 }
-.new-collections > h1{
+.new-collections  h1{
     color: #171717;
     font-size: 50px;
     font-weight: 600;
@@ -30,5 +30,11 @@
 @media (max-width:992px) {
     .collections{
         gap: 32px;
+    }
+}
+
+@media(max-width:600px){
+    .new-collections  h1{
+        font-size: 40px;
     }
 }
