--- a/src/Components/Newsletter/Newsletter.css
+++ b/src/Components/Newsletter/Newsletter.css
@@ -11,16 +11,17 @@
     background: linear-gradient(180deg , #fde1ff 0%, #e1ffea22 60%);
     gap: 30px;
 }
-.newsletter > h1{
+.newsletter  h1{
     color: #454545;
     font-size: 50px;
     font-weight: 600;
 }
-.newsletter > p {
+.newsletter  p {
     color: #454545;
     font-size: 20px;
+    text-align: center;
 }
-.newsletter > div{
+.newsletter  div{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,18 +31,18 @@
     border-radius: 80px;
     border: 1px solid #454545;
 }
-.newsletter > div > input{
+.newsletter  div  input{
     width: 500px;
     margin-left: 10px;
     border: none;
     outline: none;
     color: #616161;
     font-family: poppins;
-    font-size: 20px;
-    padding: 10px;
+    font-size: 16px;
+    padding: 4px;
     border-radius: 30px;
 }
-.newsletter > div > button{
+.newsletter  div  button{
     width: 200px;
     height: 70px;
     border-radius: 80px;
@@ -55,17 +56,17 @@
         width: 90%;
         padding: 20px;
     }
-    .newsletter > h1{
+    .newsletter  h1{
         font-size: 40px;
     }
-    .newsletter > div{
+    .newsletter  div{
         width: 80%;
         height: 60px;
     }
-    .newsletter > div > input{
+    .newsletter  div  input{
         width: 100%;
     }
-    .newsletter > div > button{
+    .newsletter  div  button{
         height: 60px;
         font-size: 16px;
     }
@@ -74,13 +75,14 @@
     .newsletter{
         width: 100%;
     }
-    .newsletter > h1{
+    .newsletter  h1{
         font-size: 36px;
     }
-    .newsletter > div{
-        height: 48px;
+    .newsletter  div{
+        height: 40px;
+        width: 90%;
     }
-    .newsletter > div > button{
-        height: 48px;
+    .newsletter  div  button{
+        height: 40px;
     }
 }
