--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -112,6 +112,7 @@
     top: 0px;
     padding: 20px 5px;
     transition: 0.3s ease-in;
+    box-shadow: 0 0 10px 1000px rgba(0, 0, 0,0.5);
   }
   .menu-container.active {
     display: block;
@@ -125,7 +126,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px 40px;
-    position: relative;
   }
   .menu-links li hr{
     display: none;
@@ -154,6 +154,7 @@
     height: 16px;
     margin-left: -45px;
     margin-top: -30px;
+    font-size: 12px;
   }
   .menu-container.active{
     width: 70vw;
